完成了第一part

--- a/main.tex
+++ b/main.tex
@@ -98,6 +98,35 @@
 	leftrule=2mm,
 	breakable
 }
+\usepackage[most]{tcolorbox}
+
+\newtcolorbox{definitionbox}{
+	colback=blue!3!white,
+	colframe=blue!60!black,
+	fonttitle=\bfseries,
+	breakable,
+	enhanced,
+	boxrule=0.8pt,
+	arc=2mm
+}
+\newtcolorbox{questionbox}{
+	colback=red!3!white,
+	colframe=red!60!black,
+	breakable,
+	enhanced,
+	boxrule=0.8pt,
+	arc=2mm
+}
+
+\newtcolorbox{examplebox}{
+	colback=green!3!white,
+	colframe=green!50!black,
+	breakable,
+	enhanced,
+	boxrule=0.8pt,
+	arc=2mm
+}
+
 
 % 画图等需要的宏包
 \usepackage{tikz}
