--- a/part1_core_logic/chapter2_structure_efficiency.tex
+++ b/part1_core_logic/chapter2_structure_efficiency.tex
@@ -267,31 +267,759 @@
 王朝周期率，是因为什么
 
 
-\section{效率的代价：结构僵化}
-\label{sec:rigidity}
 
-\section{案例：从晶体到生命}
+\section{效率的代价：结构僵化} \label{sec:rigidity}
+
+上一节我们看到，
+结构能够提高效率，
+能够让系统在更大的范围内维持秩序。
+
+但一个自然的问题随之出现：
+
+\begin{questionbox}
+	如果结构如此有效，
+	为什么历史上几乎所有庞大结构，
+	最终都会崩溃？
+\end{questionbox}
+
+本节，我们以王朝作为主案例，
+观察结构从建立到僵化的全过程。
+
+\section{效率的代价：结构僵化} \label{sec:rigidity}
+
+\begin{motivation}
+	如果结构是从自然选择中产生的，
+	如果结构提高了效率，
+	那为什么历史上几乎所有大型王朝，
+	都会走向衰退甚至崩溃？
+	
+	问题也许不在于“结构是否有效”，
+	而在于：结构是否会付出代价。
+\end{motivation}
+
+% =========================================================
+\subsection{起点：简单结构的高适应性}
+
+在王朝建立之前，往往存在一个阶段：
+组织极其简单。
+
+起义军的结构非常直接：
+决策集中，层级极少，执行迅速。
+
+失败成本低，
+调整成本更低。
+
+\begin{examplebox}
+	陈胜吴广起事时，没有复杂官僚体系；
+	朱元璋早期，也不过是军事组织的直接指挥。
+	
+	命令下达，迅速执行；
+	战术错误，可以立即调整。
+\end{examplebox}
+
+简单结构的优势在于：
+\begin{itemize}
+	\item 决策链短
+	\item 信息传递快
+	\item 协调成本低
+\end{itemize}
+
+这种“轻便”，本身就是效率。
+
+\begin{questionbox}
+	为什么推翻旧秩序的力量，
+	往往来自结构最简单的组织？
+\end{questionbox}
+
+在公司里也是如此。
+
+创业公司：
+几个人，一张桌子，一个即时通讯群。
+没有层层审批，
+决策在几分钟内完成。
+
+软件也是如此。
+早期版本功能极少，
+打开即用，
+学习成本几乎为零。
+
+简单，意味着灵活。
+
+% =========================================================
+\subsection{扩张：规模迫使复杂化}
+
+当起义成功，王朝建立，
+问题发生变化。
+
+不再是如何迅速行动，
+而是如何长期统治。
+
+疆域扩大，
+人口增加，
+税收体系建立，
+军队常备化。
+
+层级不可避免地出现。
+
+\begin{readingnote}
+	复杂不是堕落，
+	而是规模的副作用。
+\end{readingnote}
+
+为了管理广阔的土地，
+必须设立地方官；
+为了防止地方失控，
+必须设立监察；
+为了选拔人才，
+必须建立科举。
+
+结构开始分层。
+
+公司扩张时也会发生同样的事情：
+
+\begin{examplebox}
+	创业公司从 10 人扩展到 1000 人，
+	不得不建立：
+	部门划分、
+	人力资源、
+	法务、
+	审计、
+	内部流程。
+	
+	原本一条信息可以直接沟通，
+	现在需要跨部门会议。
+\end{examplebox}
+
+软件也一样。
+
+早期只有一个按钮。
+后来增加菜单。
+再后来增加设置页、插件系统、权限管理。
+
+功能增加，提高了能力；
+同时，也增加了复杂度。
+
+% =========================================================
+\subsection{校正机制的叠加：结构开始维护自身}
+
+随着层级增加，
+内部失效的风险也增加。
+
+地方官可能腐败，
+军队可能失控，
+财政可能失衡。
+
+于是引入更多校正机制。
+
+\begin{itemize}
+	\item 监察制度
+	\item 分权制衡
+	\item 财政审计
+	\item 军政分离
+\end{itemize}
+
+每一次改革，
+都是为了修补问题。
+
+但每一次修补，
+都会增加一层结构。
+
+\begin{examplebox}
+	公司出现财务问题，
+	增加审计部门；
+	出现管理混乱，
+	增加流程管理；
+	出现执行偏差，
+	增加监督岗位。
+	
+	很少有人会撤销旧部门。
+	大多数情况下，
+	新机制只是叠加在旧结构之上。
+\end{examplebox}
+
+结构开始越来越多地，
+用于防止自身出问题。
+
+% =========================================================
+\subsection{结构僵化：一个定义}
+
+\begin{definitionbox}
+	结构僵化（Structural Rigidity）：
+	
+	当维持结构本身所需的成本，
+	超过结构带来的边际效率收益时，
+	结构进入僵化状态。
+	
+	此时系统仍然运转，
+	但调整能力显著下降。
+\end{definitionbox}
+
+僵化并不等于停止。
+
+王朝仍然存在，
+官员仍然任命，
+税收仍然征收。
+
+但每一次改革，
+都会触动复杂的利益网络。
+
+% =========================================================
+\subsection{土地兼并：再分配机制失效的信号}
+
+在王朝后期，
+常见现象之一是土地兼并。
+
+大量土地集中到少数豪强或大地主手中。
+
+这并不是单一原因，
+而是一个信号。
+
+\begin{readingnote}
+	当结构无法再进行有效再分配时，
+	资源会向既有权力节点集中。
+\end{readingnote}
+
+要改革土地制度，
+需要触动地方势力；
+要调整税制，
+需要重构财政结构。
+
+当改革成本高于维持现状的成本，
+系统会选择不动。
+
+生产力开始被挤压，
+基层社会承受压力。
+
+公司也是如此。
+
+当一个部门效率低下，
+但牵涉太多内部关系，
+改革成本过高，
+管理层往往选择维持现状。
+
+软件也是如此。
+
+旧功能设计不合理，
+但修改会影响大量依赖模块，
+于是继续沿用。
+
+结构不再优化，
+而是维持。
+
+% =========================================================
+\subsection{历史周期律：结构的清算机制}
+
+当内部修复机制失效，
+外部冲击到来时，
+崩溃并非偶然。
+
+起义军再次出现，
+结构重新简化，
+周期重新开始。
+
+\begin{examplebox}
+	简单结构 → 快速扩张 → 复杂分层 → 校正叠加 → 僵化 → 崩溃 → 简化重组
+\end{examplebox}
+
+所谓“历史周期律”，
+从结构角度看，
+更像是一种清算机制。
+
+当结构无法内部更新，
+崩溃成为最自然的结果。
+
+% =========================================================
+\subsection{过渡：结构是否只能崩溃？}
+
+如果复杂结构终将僵化，
+是否存在另一种路径？
+
+是否可能在不彻底毁灭的情况下，
+完成结构更新？
+
+下一节，我们将讨论：
+结构是否可能通过重组，
+而非崩溃，
+实现自我更新。
+
+
+\section{生命为何如此复杂？}
 \label{sec:cases}
 
-\subsection{晶体结构的效率}
-\label{subsec:crystal}
+\begin{motivation}
+	我们已经看到，
+	在社会结构中，
+	复杂提高了承载能力，
+	却也带来了僵化的风险。
+	
+	那么问题来了：
+	
+	生命为什么会走向复杂？
+	如果单细胞已经可以生存，
+	为什么还要演化出高度分化的多细胞结构？
+	
+	复杂，
+	究竟是优势，
+	还是负担？
+\end{motivation}
 
-\subsection{生物组织的效率优化}
-\label{subsec:biology}
+% =========================================================
+\subsection{单细胞已经足够了吗？}
 
+\subsubsection{简单结构的完整性}
 
+一个单细胞生物，
+可以完成几乎所有基本生命活动：
 
-\subsection{局部最优与路径依赖}
-\label{subsec:local_optima}
+\begin{itemize}
+	\item 获取能量
+	\item 代谢
+	\item 感知环境
+	\item 繁殖
+\end{itemize}
 
-\section{本章小结与衔接}
-\label{sec:summary_ch2}
+它不需要心脏，
+不需要大脑，
+不需要骨骼。
 
-\subsection{回扣：结构是存在的结果}
-\label{subsec:recap}
+\begin{readingnote}
+	一个细胞，
+	就是一个完整的生命系统。
+\end{readingnote}
 
-\subsection{衔接到下一章：语言如何固化结构}
-\label{subsec:bridge_language}
+这里出现第一个疑问：
+
+\begin{questionbox}
+	如果单细胞已经可以生存，
+	为什么生命还要承担复杂化的成本？
+\end{questionbox}
+
+这个问题与我们在讨论王朝时遇到的问题相似：
+
+简单结构更灵活，
+为什么还要走向复杂？
+
+\subsubsection{反例：简单是否真的更优？}
+
+如果简单总是更好，
+那么理论上，
+地球上应该全部是单细胞生物。
+
+但事实并非如此。
+
+大型捕食者、
+复杂神经系统、
+群体协作行为，
+在竞争中具有明显优势。
+
+\begin{examplebox}
+	一个单细胞生物，
+	无法长到几十米；
+	无法形成高速奔跑的肌肉系统；
+	无法建立复杂社会协作。
+\end{examplebox}
+
+简单结构具有高灵活性，
+却缺乏规模优势。
+
+就像创业公司：
+
+小团队决策迅速，
+但无法完成大型工程。
+
+就像极简软件：
+
+启动迅速，
+却无法承载复杂功能。
+
+简单，
+并非无限优。
+
+% =========================================================
+\subsection{分工：复杂化的驱动力}
+
+\subsubsection{效率来自分工}
+
+多细胞生物的出现，
+核心变化不是“变大”，
+而是“分工”。
+
+不同细胞承担不同任务：
+
+\begin{itemize}
+	\item 神经细胞传递信号
+	\item 肌肉细胞负责运动
+	\item 上皮细胞保护外部
+\end{itemize}
+
+\begin{definitionbox}
+	分工：
+	
+	系统内部不同单元承担不同功能，
+	以提高整体效率。
+\end{definitionbox}
+
+分工让效率显著提高。
+
+\begin{examplebox}
+	如果每个细胞都要自己运动、消化、感知，
+	效率会极低。
+	
+	但当功能分离，
+	系统整体能力上升。
+\end{examplebox}
+
+公司也是如此：
+
+销售不写代码，
+程序员不做财务，
+每个部门专注自身任务。
+
+软件也是如此：
+
+数据库处理数据，
+前端负责界面，
+算法模块负责计算。
+
+分工，
+是复杂结构的效率来源。
+
+\subsubsection{读者可能的疑问}
+
+\begin{questionbox}
+	如果分工提高效率，
+	那为什么不是所有生物都高度复杂？
+\end{questionbox}
+
+这是一个关键问题。
+
+如果复杂带来优势，
+理论上应该无限复杂。
+
+但现实中，
+复杂度受到限制。
+
+为什么？
+
+% =========================================================
+\subsection{复杂的代价}
+
+\subsubsection{协调成本的出现}
+
+分工之后，
+新的问题出现：
+
+不同细胞之间，
+如何协调？
+
+于是出现：
+
+\begin{itemize}
+	\item 神经系统
+	\item 激素系统
+	\item 循环系统
+\end{itemize}
+
+这些系统的作用，
+不是直接参与生存行为，
+而是维持内部协调。
+
+\begin{readingnote}
+	复杂结构需要额外结构，
+	来维持自身。
+\end{readingnote}
+
+这与王朝后期极为相似：
+
+监察制度、
+财政系统、
+官僚分层，
+越来越多地用于维持结构本身。
+
+\subsubsection{能量消耗的上升}
+
+大脑极其耗能。
+
+人体大脑仅占体重一小部分，
+却消耗大量能量。
+
+\begin{questionbox}
+	如果复杂结构如此耗能，
+	为什么进化没有“选择更省电”的方案？
+\end{questionbox}
+
+因为复杂结构带来的认知能力，
+在竞争中弥补了成本。
+
+但这意味着：
+
+复杂必须不断证明自己的价值。
+
+如果收益下降，
+成本会成为负担。
+
+\subsubsection{反例：为什么昆虫不能无限变大？}
+
+昆虫拥有外骨骼结构。
+
+这种结构在小体型时效率很高，
+但体型变大时：
+
+\begin{itemize}
+	\item 支撑压力急剧增加
+	\item 呼吸系统效率下降
+\end{itemize}
+
+结构设计限制了规模。
+
+\begin{readingnote}
+	结构决定了承载上限。
+\end{readingnote}
+
+这与王朝类似：
+
+行政结构设计，
+决定了可管理规模。
+
+超过阈值，
+成本急剧上升。
+
+% =========================================================
+\subsection{生物的结构弹性}
+
+\subsubsection{一个关键差异}
+
+我们必须问：
+
+\begin{questionbox}
+	为什么生物不会像王朝一样，
+	周期性整体崩溃？
+\end{questionbox}
+
+答案在于更新机制。
+
+\subsubsection{局部替换机制}
+
+生物具有：
+
+\begin{itemize}
+	\item 细胞更新
+	\item 组织修复
+	\item 免疫系统
+\end{itemize}
+
+局部失败，
+不会立刻导致整体毁灭。
+
+\begin{definitionbox}
+	结构弹性：
+	
+	系统在保持整体连续性的前提下，
+	进行局部替换与修复的能力。
+\end{definitionbox}
+
+软件中的模块化设计，
+允许替换单个模块。
+
+公司中的部门重组，
+允许调整结构。
+
+王朝缺乏这种局部替换能力，
+因此更新成本极高。
+
+\subsubsection{必要性分析}
+
+如果一个复杂系统：
+
+\begin{itemize}
+	\item 必须依赖分工
+	\item 协调成本随规模上升
+	\item 缺乏局部替换机制
+\end{itemize}
+
+那么长期来看，
+崩溃将成为唯一重组方式。
+
+生物通过不断更新，
+避免整体断裂。
+
+这并非偶然，
+而是结构设计的结果。
+
+% =========================================================
+\subsection{统一视角：复杂、效率与限制}
+
+现在我们可以对比三类结构：
+
+\begin{center}
+	\begin{tabular}{llll}
+		\toprule
+		系统 & 复杂化原因 & 代价 & 更新机制 \\
+		\midrule
+		王朝 & 规模扩张 & 僵化 & 崩溃重组 \\
+		公司 & 市场扩张 & 流程膨胀 & 组织重组 \\
+		生物 & 分工进化 & 能耗上升 & 细胞更新 \\
+		\bottomrule
+	\end{tabular}
+\end{center}
+
+\begin{readingnote}
+	复杂本身不是问题。
+	问题在于，
+	系统是否具备在复杂中更新自己的能力。
+\end{readingnote}
+
+最后一个问题留给读者：
+
+\begin{questionbox}
+	结构是否可以被设计成既复杂，
+	又持续可更新？
+\end{questionbox}
+
+下一章，
+我们将从更抽象的层面，
+讨论结构如何通过分层与模块化，
+实现可持续的复杂性。
+
+% =========================================================
+\subsection*{小结：结构并非优劣，而是存活条件}
+
+\addcontentsline{toc}{section}{小结：结构并非优劣，而是存活条件}
+
+我们已经看到：
+
+结构可以提高效率，
+分工可以扩大承载能力，
+复杂可以增强功能。
+
+但结构也会带来代价：
+
+协调成本、
+能量消耗、
+僵化风险。
+
+那么，我们是否可以说：
+“复杂优于简单”？
+
+答案并不如此简单。
+
+\begin{readingnote}
+	结构并非在“最优”与“低劣”之间竞争，
+	而是在“能否持续存在”之间竞争。
+\end{readingnote}
+
+自然选择并不追求绝对最优，
+它只淘汰迅速消亡的形式。
+
+一个结构，
+不需要达到理论上的最高效率，
+只需要在环境中不被迅速淘汰。
+
+这意味着：
+
+\begin{itemize}
+	\item 单细胞依然存在
+	\item 多细胞依然存在
+	\item 简单组织依然存在
+	\item 复杂组织依然存在
+\end{itemize}
+
+它们不是优劣关系，
+而是不同环境下的稳定解。
+
+\subsection*{中性选择与路径积累}
+
+更进一步说，
+许多结构并非因为“更优”而被保留，
+而是因为：
+
+\begin{itemize}
+	\item 它们足够稳定
+	\item 它们未被淘汰
+	\item 它们已经积累到难以回退
+\end{itemize}
+
+这是一种近似“中性选择”的过程。
+
+\begin{readingnote}
+	结构往往不是走向最优，
+	而是走向可持续。
+\end{readingnote}
+
+语法未必最优，
+官僚制度未必最优，
+神经系统未必最优。
+
+但它们足够好，
+以至于没有被替代。
+
+历史不会从零开始优化，
+而是在既有结构上叠加。
+
+\subsubsection*{必要性：为什么必须有结构？}
+
+现在回到一个更根本的问题：
+
+\begin{questionbox}
+	如果结构带来代价，
+	是否可以完全避免结构？
+\end{questionbox}
+
+答案是否定的。
+
+没有结构，
+系统无法协调；
+没有分工，
+规模无法扩展；
+没有组织，
+复杂行为无法形成。
+
+结构不是奢侈品，
+而是规模的必要条件。
+
+问题不在于是否有结构，
+而在于结构是否允许调整。
+
+\subsubsection*{过渡问题：是否存在复杂却易于调整的结构？}
+
+到目前为止，
+我们看到的复杂结构——
+无论王朝还是生物——
+都需要漫长时间积累，
+并在演化与筛选中形成。
+
+结构的建立并不容易。
+
+它需要：
+
+\begin{itemize}
+	\item 时间
+	\item 稳定环境
+	\item 多次试错
+	\item 大量失败
+\end{itemize}
+
+阻力重重。
+
+那么问题来了：
+
+\begin{questionbox}
+	是否存在一种复杂结构，
+	它的建立成本较低，
+	调整成本较低，
+	却仍然具有高度表达能力？
+\end{questionbox}
+
+如果存在，
+它将是一个非常特殊的例子。
+
+接下来，
+我们将进入这样一个结构领域——
+
+语言。
+
+% =========================================================
+
 
 
 \end{document}
